--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
-<body>
-  <link href="https://fonts.googleapis.com/css?family=Oswald|Lato|Roboto:400,500" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="styles.css">
-  <div class="container">
+<html>
+  <body>
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Lato|Roboto:400,500" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="design.js"></script>
 
-  <h1>Pixel Art Maker</h1>
-  <h2>Choose Grid Size</h2>
-  <form id="sizePicker">
-    Grid Height:
-    <input type="number" id="input_height" name="height" min="1" value="1"> 
-    Grid Width:
-    <input type="number" id="input_width" name="width" min="1" value="1">
+    <div class="container">
 
-    <input type="submit">
-  </form>
+      <h1>Pixel Art Maker</h1>
+      <h2>Choose Grid Size</h2>
+    
+      <form id="sizePicker">
+      Grid Height:
+      <input type="number" id="input_height" name="height" min="1" value="1"> 
+      Grid Width:
+      <input type="number" id="input_width" name="width" min="1" value="1">
+      <input type="submit">
+      </form>
 
-  <h2>Pick A Color</h2>
-  <input type="color" id="colorPicker">
+      <h2>Pick A Color</h2>
+      <input type="color" id="colorPicker">
 
-  <h2>Design Canvas</h2>
-  <table id="pixel_canvas"></table>
-  </div>
+      <h2>Design Canvas</h2>
+      <table id="pixel_canvas"></table>
+      </div>
 
-  <script src="design.js"></script>
-</body>
-
+  </body>
 </html>
